# rusearch

./: AGENTS.md  Cargo.toml  LICENSE  README.md  USAGE.md
.idx/: dev.nix
src/: args.rs  main.rs  search.rs
