[package]
name = "rusearch"
version = "0.1.0"
edition = "2021"
description = "A super-fast, parallel, recursive directory search CLI for developers and power users."
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rusearch"
documentation = "https://docs.rs/rusearch"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1"
