[package]
name = "rusearch"
version = "1.0.0"
edition = "2021"
description = "A super-fast, parallel, recursive directory search CLI for developers and power users."
authors = ["nathfavour <116535483+nathfavour@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/nathfavour/rusearch"
documentation = "https://nathfavour.github.io/rusearch/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1"
